# bici

./: CMakeLists.txt  README.md
build_rel/: .ninja_deps  .ninja_log  CMakeCache.txt  bici  build.ninja  cmake_install.cmake  compile_commands.json
include/: IR.hpp  IRGenerator.hpp  IRInterpreter.hpp  Lexer.hpp
src/: IRGenerator.cpp  IRInterpreter.cpp  Lexer.cpp  Main.cpp
